--- a/TownscapeMobile/AppShell.xaml
+++ b/TownscapeMobile/AppShell.xaml
@@ -4,11 +4,23 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:TownscapeMobile"
-    Shell.FlyoutBehavior="Disabled">
+    Shell.FlyoutBehavior="Disabled"
+    xmlns:views="clr-namespace:TownscapeMobile.views"
+    BackgroundColor="#ef233c">
 
-    <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+    <TabBar>
+        <Tab Title="События"
+             Icon="online.png">
+            <ShellContent ContentTemplate="{DataTemplate views:NewsPage}"></ShellContent>
+        </Tab>
+        <Tab Title="Карта"
+             Icon="map.png">
+            <ShellContent ContentTemplate="{DataTemplate views:MapPage}"></ShellContent>
+        </Tab>
+        <Tab Title="Профиль"
+             Icon="user.png">
+            <ShellContent ContentTemplate="{DataTemplate views:UserPage}"></ShellContent>
+        </Tab>
+    </TabBar>
 
 </Shell>
