--- a/TownscapeMobile/views/NewsPage.xaml
+++ b/TownscapeMobile/views/NewsPage.xaml
@@ -5,7 +5,7 @@
              Title="NewsPage">
     <VerticalStackLayout>
         <Label 
-            Text="Welcome to .NET MAUI!"
+            Text="Эгегей, пидорасы!"
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
     </VerticalStackLayout>
