--- a/TownscapeMobile/Resources/Styles/Colors.xaml
+++ b/TownscapeMobile/Resources/Styles/Colors.xaml
@@ -40,5 +40,11 @@
     <Color x:Key="Blue100Accent">#3E8EED</Color>
     <Color x:Key="Blue200Accent">#72ACF1</Color>
     <Color x:Key="Blue300Accent">#A7CBF6</Color>
+    <Color x:Key="Green1">#c0e800</Color>
+    <Color x:Key="Green2">#6BDB00</Color>
+    <Color x:Key="Green3">#0edf07</Color>
+    <Color x:Key="Green4">#0c9c00</Color>
+    <Color x:Key="LightWhite">#f2f3f4</Color>
+    <Color x:Key="DarkBlue">#001a30</Color>
 
 </ResourceDictionary>
