--- a/TownscapeMobile/views/UserPage.xaml
+++ b/TownscapeMobile/views/UserPage.xaml
@@ -5,7 +5,7 @@
              Title="UserPage">
     <VerticalStackLayout>
         <Label 
-            Text="Welcome to .NET MAUI!"
+            Text="Здесь будет профиль пользователя!"
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
     </VerticalStackLayout>
