--- a/TownscapeMobile/views/MapPage.xaml
+++ b/TownscapeMobile/views/MapPage.xaml
@@ -5,7 +5,7 @@
              Title="MapPage">
     <VerticalStackLayout>
         <Label 
-            Text="Welcome to .NET MAUI!"
+            Text="Здесь будет карта!"
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
     </VerticalStackLayout>
